Too much bugs and fixes I got my brain froozen

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,10 +9,12 @@
 
 * {
 	font-family: helvetica;
+	transition: 0.3s;
+	transition-timing-function: ease-out;
 }
 
 body {
-	background-color: #333;
+	background-color: #0e0e0e;
 }
 
 #ZeroButton {
@@ -20,6 +22,14 @@ body {
 	border-bottom-right-radius: 45px 45px;
 	border-top-left-radius: 45px 45px;
 	border-bottom-left-radius: 45px 45px;
+}
+
+#selected {
+	background: #fffeff;
+}
+
+#selected div {
+	background: #ff9f0a;
 }
 
 /* :root {
